--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite-vue": "^0.0.12",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
