--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue3-google-login": "^2.0.15",
+    "vue3-markdown-it": "^1.0.10",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
