--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "compressorjs": "^1.2.1",
     "flowbite": "^1.6.5",
     "flowbite-vue": "^0.0.12",
+    "qrcode": "^1.5.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue3-google-login": "^2.0.15",
